saves loadest inputs - notebook outputs not cleared?

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -86,7 +86,8 @@
     "from collections import namedtuple\n",
     "from dateutil.parser import parse\n",
     "from datetime import timedelta\n",
-    "import json"
+    "import json\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -1208,7 +1209,18 @@
     "        i += 1\n",
     "        while i < len(flow_obs) - 2 and date == flow_obs[i+1][0]:\n",
     "            i += 1\n",
-    "    flow_itrp[site] = res"
+    "    flow_itrp[site] = res\n",
+    "\n",
+    "    outpath = Path(\"loadests\").joinpath(site)\n",
+    "    outpath.mkdir(parents=True, exist_ok=True)\n",
+    "    outfile = outpath.joinpath(\"%s_est.csv\" % site)\n",
+    "    res = pd.DataFrame(data=dict(\n",
+    "        date=[i[0].strftime(\"%Y%m%d\") for i in res],\n",
+    "        time='12:00',\n",
+    "        flow=[i[1] for i in res],\n",
+    "        itrp=[i[2] for i in res],\n",
+    "    ))\n",
+    "    res.to_csv(outfile, index=False)\n"
    ]
   },
   {
@@ -1242,6 +1254,9 @@
     "fdropped = 0\n",
     "\n",
     "for site in flow_itrp:\n",
+    "    if False and site != 'USGS-04232050':\n",
+    "        continue\n",
+    "        \n",
     "    calobs = []\n",
     "    sitep = pdata[pdata.site == site].copy()\n",
     "    # sitep['date'] = [\n",
@@ -1254,14 +1269,45 @@
     "    if n:\n",
     "        print(\"Dropped %s %d obs. on repeated dates\" % (site, n))\n",
     "        ddropped += n\n",
-    "    flow = {i[0]:i[1] for i in flow_itrp.get(site, [])}\n",
-    "    sitep['iflow'] = [flow.get(i, np.NaN) for i in sitep.date]\n",
+    "    iflow = {i[0]:i[1] for i in flow_itrp.get(site, [])}\n",
+    "    sitep['iflow'] = [iflow.get(i, np.NaN) for i in sitep.date]\n",
+    "    # use general flow only in absence of specific flow from WQ data\n",
+    "    missing = np.isnan(sitep.flow)\n",
+    "    sitep.loc[missing, 'flow'] = sitep.loc[missing, 'iflow']\n",
     "    n = len(sitep)\n",
-    "    sitep = sitep[~np.isnan(sitep.iflow)]\n",
+    "    sitep = sitep[~np.isnan(sitep.flow)]\n",
     "    n -= len(sitep)\n",
     "    if n:\n",
     "        print(\"Dropped %s %d obs. for no flow data\" % (site, n))\n",
     "        fdropped += n\n",
+    "    outpath = Path(\"loadests\").joinpath(site)\n",
+    "    outpath.mkdir(parents=True, exist_ok=True)\n",
+    "    outfile = outpath.joinpath(\"%s_calib.csv\" % site)\n",
+    "\n",
+    "    estfile = outpath.joinpath(\"%s_est.csv\" % site)\n",
+    "    pltfile = outpath.joinpath(\"%s_data.pdf\" % site)\n",
+    "    sitef = pd.read_csv(estfile)\n",
+    "    plt.clf()\n",
+    "    plt.gcf().set_size_inches(20, 6)\n",
+    "    # this just runs without returning\n",
+    "    # markerline, stemlines, baseline = plt.stem(sitep.date, sitep.flow)\n",
+    "    # plt.setp(stemlines, 'linewidth', 0.3)\n",
+    "    # markerline, stemlines, baseline = plt.stem([parse(str(i)) for i in sitef.date], sitef.flow)\n",
+    "    # plt.setp(stemlines, 'linewidth', 0.3)\n",
+    "    plt.plot([parse(str(i)) for i in sitef.date], sitef.flow, lw=0.3)  #, s=0.8)\n",
+    "    plt.scatter(sitep.date, sitep.flow, lw=0.3, s=0.4)\n",
+    "    ax2 = plt.gca().twinx()\n",
+    "    ax2.scatter(sitep.date, sitep.conc, s=0.5, c='k')\n",
+    "    plt.savefig(pltfile)\n",
+    "\n",
+    "    sitep = pd.DataFrame(data=dict(\n",
+    "        date=[i.strftime(\"%Y%m%d\") for i in sitep.date],\n",
+    "        time='12:00',\n",
+    "        flow=sitep.iflow,\n",
+    "        conc=sitep.conc,\n",
+    "    ))\n",
+    "    sitep.to_csv(outfile, index=False)\n",
+    "        \n",
     "print(\"Dropped %d obs. on repeated dates\" % ddropped)\n",
     "print(\"Dropped %d P obs. with no flow\" % fdropped)"
    ]
