saves site_info.csv

--- a/LOads.ipynb
+++ b/LOads.ipynb
@@ -87,7 +87,8 @@
     "from dateutil.parser import parse\n",
     "from datetime import timedelta\n",
     "import json\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -1157,6 +1158,7 @@
    "source": [
     "# first, collect actual flow observations by site\n",
     "flow_itrp = {}\n",
+    "site_info = defaultdict(lambda: dict())\n",
     "for row in locs.itertuples():\n",
     "    site = row.site\n",
     "    flow_obs = []\n",
@@ -1177,6 +1179,9 @@
     "    if flow_obs:\n",
     "        flow_obs.sort()\n",
     "        flow_itrp[site] = flow_obs\n",
+    "        site_info[site]['flow_n'] = len(flow_obs)\n",
+    "        site_info[site]['flow_s'] = flow_obs[0][0]\n",
+    "        site_info[site]['flow_e'] = flow_obs[-1][0]\n",
     "# [i for i in flow_itrp['USGS-04232050'] if i[0].year == 2016 and i[0].month == 6]"
    ]
   },
@@ -1280,6 +1285,15 @@
     "    if n:\n",
     "        print(\"Dropped %s %d obs. for no flow data\" % (site, n))\n",
     "        fdropped += n\n",
+    "\n",
+    "    if len(sitep) == 0:\n",
+    "        del site_info[site]\n",
+    "        continue\n",
+    "        \n",
+    "    site_info[site]['p_n'] = len(sitep)\n",
+    "    site_info[site]['p_s'] = sitep.date.min()\n",
+    "    site_info[site]['p_e'] = sitep.date.max()\n",
+    "        \n",
     "    outpath = Path(\"loadests\").joinpath(site)\n",
     "    outpath.mkdir(parents=True, exist_ok=True)\n",
     "    outfile = outpath.joinpath(\"%s_calib.csv\" % site)\n",
@@ -1318,25 +1332,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[i for i in flow_itrp['USGS-04232050'] if i[0].year == 2016 and i[0].month == 6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[i for i in flows['04232050'] if '2016-06-13' in i[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parse('2016-06-13T00:00:00.000')"
+    "si = pd.DataFrame.from_records(site_info).transpose()\n",
+    "si = si.loc[:, ('flow_n', 'flow_s', 'flow_e', 'p_n', 'p_s', 'p_e')]\n",
+    "si.index.name = 'site'\n",
+    "si = si[si.p_n > 0]\n",
+    "si.to_csv(\"site_info.csv\")"
    ]
   }
  ],
